--- a/assets/ui.css
+++ b/assets/ui.css
@@ -82,7 +82,8 @@ svg#icon_defs path {
 /* Dropdown menu styles */
 .menu-dropdown {
      position: absolute;
-     top: 40px; /* below top bar */
+     top: 40px;
+     /* below top bar */
      right: 10px;
      width: 240px;
      background: #2b2b38;
