--- a/assets/chrome-tabs.css
+++ b/assets/chrome-tabs.css
@@ -1,3 +1,7 @@
+* {
+  transition: all 0.2s ease-in-out;
+}
+
 .chrome-tabs {
   box-sizing: border-box;
   position: relative;
@@ -18,14 +22,13 @@
 
 #chrome-tabs-add-tab {
   background: linear-gradient(0deg, #232330, #282836);
-  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.4);
   display: block;
   position: absolute;
   right: 12px;
   top: 8px;
-  padding: 5px 10px;
+  padding: 5px 15px;
   border: 0.8px solid #252532;
-  border-radius: 8px;
+  border-radius: 15px;
   font-size: 12px;
   z-index: 100;
   height: 24px;
