--- a/assets/chrome-tabs.css
+++ b/assets/chrome-tabs.css
@@ -199,6 +199,37 @@
   left: 0;
 }
 
+body.compact-tabs .chrome-tabs {
+  height: 34px;
+  padding: 0.25em 1em 0 1em;
+}
+
+body.compact-tabs #chrome-tabs-add-tab {
+  height: 31px;
+  top: 2px;
+  padding: 0 14px;
+  font-size: 12px;
+}
+
+body.compact-tabs .chrome-tabs .chrome-tab {
+  height: 31px;
+  top: 2px;
+}
+
+body.compact-tabs .chrome-tabs .chrome-tab .chrome-tab-background {
+  margin: 1px 4px 3px 4px;
+  height: calc(100% - 2px);
+}
+
+body.compact-tabs .chrome-tabs .chrome-tab-title {
+  margin-top: 7px;
+  font-size: 11px;
+}
+
+body.compact-tabs .chrome-tabs .chrome-tab-close {
+  top: 8px;
+}
+
 .chrome-tabs .chrome-tab-close:hover::before,
 .chrome-tabs .chrome-tab-close:hover:active::before {
   content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 14'><path stroke='%23fff' stroke-width='1.3' d='M4 4 L10 10 M10 4 L4 10'></path></svg>");
